--- a/index.html
+++ b/index.html
@@ -7,7 +7,21 @@
     <title>Donut Clicker</title>
   </head>
   <body>
-    <div class="container"></div>
-    <script src="./index.js"></script>
+    <div class="button">
+      <button id="donut">Buy Donuts</button>
+
+      <h1 id="donut-count"></h1>
+
+      </div>
+
+      <div class="button">
+        <p id="auto-clicker-cost">Auto Clicker Count: 0</p>
+        <button id = "purchased-auto-clicker">Purchase AutoClicker</button>
+  
+        <h2 id="auto-clicker-count">Auto Clicker Count: 0</h2>
+  
+        </div>
+
+    <script type='module' src="./index.js"></script>
   </body>
 </html>
